added Css styling

--- a/index.html
+++ b/index.html
@@ -1,13 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Css/reset.css">
+    <link rel="stylesheet" href="Css/style.css">
     <title>cookies stand page</title>
 </head>
+
 <body>
 
+    <section id='heading'>
+        <div>
+            <img src="https://github.com/LTUC/amman-201d20/blob/main/class-08/lab-b/assets/salmon.png?raw=true"
+                width="200px" height="70px">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="sales.html">sales page</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">contact us</a></li>
+                <li><a href="#">Delivery</a></li>
+            </ul>
+        </nav>
+    </section>
+    <img id='bigimg' src="https://github.com/LTUC/amman-201d20/blob/main/class-08/lab-b/assets/family.jpg?raw=true">
+    <main>
+        <div id='location'>
+            <h2>Locations:</h2>
+            <ol>
+                <li>seattle : 8th Ave S Seattle, Washington(WA)</li>
+                <li>tokyo:21-15 Jingumae, Shibuya City, Tokyo 150</li>
+                <li>Dubai: The Dubai Mall Upper Level</li>
+                <li>paris:72 Rue Legendre, 75017 Paris</li>
+                <li>Lima:Jirón de la Unión 272, Cercado de Lima 15001</li>
+            </ol>
+        </div>
+        <div id='hours'>
+            <h3>Hours open : </h3>
+            <ul>
+                <li>seattle : monday to friday (6am - 7pm)</li>
+                <li>tokyo:monday to friday (6am - 7pm)</li>
+                <li>Dubai: sunday to thursday (6am - 7pm)</li>
+                <li>paris:monday to friday (6am - 7pm)</li>
+                <li>Lima:monday to friday (6am - 7pm)</li>
+            </ul>
+
+        </div>
+        <section id='lot'>
+
+            <div id='medimg'>
+                <img src="https://github.com/LTUC/amman-201d20/blob/main/class-08/lab-b/assets/fish.jpg?raw=true">
+                <img
+                    src="https://github.com/LTUC/amman-201d20/blob/main/class-08/lab-b/assets/frosted-cookie.jpg?raw=true">
+                <img src="https://github.com/LTUC/amman-201d20/blob/main/class-08/lab-b/assets/cutter.jpeg?raw=true">
+
+            </div>
+            <div id='contact'>
+                <h3>Contact information : </h3>
+                <ul>
+                    <li>seattle : <a href="#">seattle@cookies.com</a></li>
+                    <li>tokyo:<a href="#">seattle@cookies.com</a></li>
+                    <li>Dubai: <a href="#">seattle@cookies.com</a></li>
+                    <li>paris:<a href="#">seattle@cookies.com</a></li>
+                    <li>Lima:<a href="#">seattle@cookies.com</a></li>
+                </ul>
+            </div>
+            <div id='fish'>
+                <img src="https://github.com/LTUC/amman-201d20/blob/main/class-08/lab-b/assets/chinook.jpg?raw=true">
+
+            </div>
+
+        </section>
+
+            <div id='shirt'>
+                <img src="https://github.com/LTUC/amman-201d20/blob/main/class-08/lab-b/assets/shirt.jpg?raw=true">
     
+            </div>
+    
+            <div id='saving'>
+                Saving  , Saving , saving ....<br> 
+                If you buy our Cookies online 
+                You will get our salmon shirt 
+                for free .
+                just add our cookies to your cart and the delivery service for more than 50$ for free .
+            </div>
+
+    </main>
+
+
+    <footer>
+        &copy;2021 cookies Shop
+
+    </footer>
+
+
 </body>
+
 </html>
