--- a/sales.html
+++ b/sales.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="Css/style.css">
 </head>
 <body>
+    <a href="index.html">Home page</a>
     <div id="first">
 
     </div>
