--- a/sales.html
+++ b/sales.html
@@ -7,8 +7,34 @@
     <title>Document</title>
     <link rel="stylesheet" href="Css/style.css">
 </head>
+
+ 
 <body>
     <a href="index.html">Home page</a>
+    <form action="" id='userEvent'>
+        <fieldset>
+            <label for="place">Location name :</label>
+            <input type="text" id='place' name='place'>
+            <br>
+            <br>
+            <label for="min">Minimum customer/ hour :</label>
+            <input type="number" id='min' name="min">
+            <br>
+            <br>
+            <label for="max">Maximum customer/ hous :</label>
+            <input type="number" id='max'name='max'>
+            <br>
+            <br>
+            <label for="avg">Average cookies/hour :</label>
+            <input type="number" id='avg' name="avg">
+            <br>
+            <br>
+            <input type="submit" value="Click here">
+        </fieldset>
+    </form>
+        
+    
+
     <div id="first">
 
     </div>
