--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="sales.html">sales page</a></li>
+                <li><a href="sales.html" target="_blank">sales page</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">contact us</a></li>
                 <li><a href="#">Delivery</a></li>
