solved the issues

--- a/sales.html
+++ b/sales.html
@@ -14,19 +14,19 @@
     <form action="" id='userEvent'>
         <fieldset>
             <label for="place">Location name :</label>
-            <input type="text" id='place' name='place'>
+            <input type="text" id='place' name='place' required>
             <br>
             <br>
             <label for="min">Minimum customer/ hour :</label>
-            <input type="number" id='min' name="min">
+            <input type="number" id='min' name="min" required>
             <br>
             <br>
             <label for="max">Maximum customer/ hous :</label>
-            <input type="number" id='max'name='max'>
+            <input type="number" id='max'name='max'required>
             <br>
             <br>
             <label for="avg">Average cookies/hour :</label>
-            <input type="number" id='avg' name="avg">
+            <input type="float" id='avg' name="avg"required>
             <br>
             <br>
             <input type="submit" value="Click here">
