fixed total cookies

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 
     <section id='heading'>
         <div>
-            <img src="https://github.com/LTUC/amman-201d20/blob/main/class-08/lab-b/assets/salmon.png?raw=true"
+            <img src="img/salmon.png"
                 width="200px" height="70px">
         </div>
         <nav>
             <ul>
                 <li><a href="sales.html" target="_blank">sales page</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">contact us</a></li>
+                <li><a href="#contact">contact us</a></li>
                 <li><a href="#">Delivery</a></li>
             </ul>
         </nav>
     </section>
-    <img id='bigimg' src="https://github.com/LTUC/amman-201d20/blob/main/class-08/lab-b/assets/family.jpg?raw=true">
+    <img id='bigimg' src="img/family.jpg">
     <main>
         <div id='location'>
             <h2>Locations:</h2>
@@ -52,10 +52,10 @@
         <section id='lot'>
 
             <div id='medimg'>
-                <img src="https://github.com/LTUC/amman-201d20/blob/main/class-08/lab-b/assets/fish.jpg?raw=true">
+                <img src="img/fish.jpg">
                 <img
-                    src="https://github.com/LTUC/amman-201d20/blob/main/class-08/lab-b/assets/frosted-cookie.jpg?raw=true">
-                <img src="https://github.com/LTUC/amman-201d20/blob/main/class-08/lab-b/assets/cutter.jpeg?raw=true">
+                    src="img/frosted-cookie.jpg">
+                <img src="img/cutter.jpg">
 
             </div>
             <div id='contact'>
@@ -69,14 +69,14 @@
                 </ul>
             </div>
             <div id='fish'>
-                <img src="https://github.com/LTUC/amman-201d20/blob/main/class-08/lab-b/assets/chinook.jpg?raw=true">
+                <img src="img/chinook.jpg">
 
             </div>
 
         </section>
 
             <div id='shirt'>
-                <img src="https://github.com/LTUC/amman-201d20/blob/main/class-08/lab-b/assets/shirt.jpg?raw=true">
+                <img src="img/shirt.jpg">
     
             </div>
     
