--- a/sales.html
+++ b/sales.html
@@ -10,7 +10,15 @@
 
  
 <body>
+
+<header id='salesheader'>
+    <div>
+        <img src="img/salmon.png"
+            width="200px" height="70px">
+    </div>
+
     <a href="index.html">Home page</a>
+</header>
     <form action="" id='userEvent'>
         <fieldset>
             <label for="place">Location name :</label>
