--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Css/reset.css">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Righteous&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Css/style.css">
     <title>cookies stand page</title>
 </head>
@@ -16,6 +17,7 @@
         <div>
             <img src="img/salmon.png"
                 width="200px" height="70px">
+   
         </div>
         <nav>
             <ul>
